--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,17 @@
     autocomplete="off"
     placeholder="Search images..."
   />
-  <button type="submit">Search</button>
+  <button type="submit" class="btn">Search</button>
 </form>
 
 <div class="gallery">
-
+  <!-- Картки зображень -->
 </div>
 
-<button type="button"></button>
 
-<script src="./index.js"></script>
+
+<button type="button" class=" btn load-more js-load-more is-hidden">Load more</button>
+
+<script src="./index.js"  type="module"></script>
 </body>
 </html>
