--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script>
+       function scrollToTop() {
+        window.scrollTo({
+        top: 0,
+        behavior: 'smooth'
+      });
+    }
+    </script>
 </head>
 <body>
 <form class="search-form" id="search-form">
@@ -22,7 +30,7 @@
   <!-- Картки зображень -->
 </div>
 
-
+<button class="back-to-top" onclick="scrollToTop()" >Top</button>
 
 <button type="button" class=" btn load-more js-load-more is-hidden">Load more</button>
 
